--- a/css/general.css
+++ b/css/general.css
@@ -8,3 +8,13 @@ body {
   width:500px;
   
 }
+
+ul,li {
+    display: inline;
+    list-style-type: disc;
+    margin-top: 1em;
+    margin-bottom: 1 em;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 40px;
+}
