--- a/css/general.css
+++ b/css/general.css
@@ -18,3 +18,9 @@ ul,li {
     margin-right: 0;
     padding-left: 40px;
 }
+
+.fintech_money{
+		border:5px solid;
+		margin-left:50vw;
+		margin-right:10vw;
+	}
