--- a/css/general.css
+++ b/css/general.css
@@ -19,8 +19,8 @@ ul,li {
     padding-left: 40px;
 }
 
-.fintech_money{
-		border:5px solid;
-		margin-left:50vw;
-		margin-right:10vw;
-	}
+.FintechMoney{
+	border:5px solid;
+	margin-left:50vw;
+	margin-right:10vw;
+}
