--- a/css/general.css
+++ b/css/general.css
@@ -4,8 +4,8 @@ body {
 
 .theme {
   position: relative;
-    left: 700px;
-    top:-25vw;
+    left: 0px;
+    top:-50px;
   color:white;
   width:500px;
   
