--- a/css/general.css
+++ b/css/general.css
@@ -43,6 +43,7 @@ body {
 	background-image: url("../img/first_background.png");
 	background-size:100vw;
 	width:100vw;
+	height:42.8vw;
 }
 
 .block2{
