--- a/css/general.css
+++ b/css/general.css
@@ -56,7 +56,23 @@ body {
 	width:14%;
 	height:40px;
 }
-
+.fb{
+        position: absolute;
+	top:40vw;
+	right:30vw;
+	
+}
+.youtube{
+       position:absolute;
+       top:40vw;
+       right:20vw;
+       	
+}
+.mail{
+      position:absolute;
+      top:40vw;
+      right:10vw;	
+}
 
 .block1{
 	background-image: url("../img/first_background.png");
