--- a/css/general.css
+++ b/css/general.css
@@ -60,18 +60,22 @@ body {
         position: absolute;
 	top:40vw;
 	right:30vw;
-	
+	width:14%;
+	height:40px;
 }
 .youtube{
        position:absolute;
        top:40vw;
        right:20vw;
-       	
+       width:14%;
+       height:40px;	
 }
 .mail{
       position:absolute;
       top:40vw;
-      right:10vw;	
+      right:10vw;
+      width:14%;
+      height:40px;	
 }
 
 .block1{
