--- a/css/general.css
+++ b/css/general.css
@@ -56,8 +56,27 @@ body {
 	width:14%;
 	height:40px;
 }
-
-
+.fb{
+        position: fixed;
+	top:37vw;
+	right:30vw;
+	width:14%;
+	height:45px;
+}
+.youtube{
+        position: fixed;
+	top: 37vw;
+	right:20vw;
+	width:14%;
+	height:40px:
+}
+.mail{
+        position:fixed;
+	top:37vw;
+	right:10vw;
+	width:14;%
+	height:40px;	
+}
 .block1{
 	background-image: url("../img/first_background.png");
 	background-size:100vw;
