--- a/css/general.css
+++ b/css/general.css
@@ -66,15 +66,15 @@ body {
 .youtube{
         position: fixed;
 	top: 37vw;
-	right:20vw;
+	right:25vw;
 	width:14%;
 	height:40px:
 }
 .mail{
         position:fixed;
 	top:37vw;
-	right:10vw;
-	width:14;%
+	right:20vw;
+	width:14%;
 	height:40px;	
 }
 .block1{
