--- a/css/general.css
+++ b/css/general.css
@@ -14,7 +14,7 @@ a:hover{position:relative;top:1px;left:1px;}
 	font-size:2.2vw;
 	top:1vw;
 	left:0vw;
-	
+	font-family:"Calibri";
   
 }
  .th_sub_f{
