--- a/css/general.css
+++ b/css/general.css
@@ -1,4 +1,3 @@
-
 body {
   background-color:black;
 }
@@ -48,6 +47,7 @@ a:hover{position:relative;top:1px;left:1px;}
 
 .download{
 	position: absolute;
+
 	top:38.2vw;
 	left:2vw;
 	width:14%;
@@ -92,6 +92,44 @@ a:hover{position:relative;top:1px;left:1px;}
 	width:14%;
 	height:40px;	
 }
+
+.p1_r_c{
+	display:flex;
+	position:absolute;
+	top:11vw;	
+	left:43vw;	
+	width:50%;
+	height:11vw;	
+	border-color:white;
+	border-style:solid;
+	border-width:5px;
+}
+
+.fintech_c{
+	
+	position: absolute;	
+	top:1.8vw;
+	left:0.8vw;
+	width:8.5%;
+	height:70px;
+}
+
+
+.fintech_w{
+	padding-top:3.6vw;
+	padding-left:8.5vw;
+	color:orange;
+	font-size:3vw;
+	
+}
+
+.fintech_t{
+	font-size:2.2vw;
+	padding-top:2.6vw;
+	padding-left:8vw;
+}
+
+
 .block1{
 	background-image: url("../img/first_background.png");
 	background-size:100vw;
