--- a/css/general.css
+++ b/css/general.css
@@ -12,7 +12,7 @@ a:hover{position:relative;top:1px;left:1px;}
 	font-size:2.2vw;
 	top:1vw;
 	left:0vw;
-	
+	font-family:"Calibri";
   
 }
  .th_sub_f{
@@ -24,8 +24,7 @@ a:hover{position:relative;top:1px;left:1px;}
 
 .th_sub{
 	font-family:"Calibri";
-	color:white;
-	text-decoration:none;
+	color:white;	
 	padding-right:2vw;
 	margin-top:1vw;
 }
