--- a/css/general.css
+++ b/css/general.css
@@ -128,6 +128,63 @@ a:hover{position:relative;top:1px;left:1px;}
 	padding-top:2.6vw;
 	padding-left:8vw;
 }
+.p2_c_t{
+	display:flex;		
+	position:absolute;
+	left:18vw;	
+	top:52.8vw;	
+	height:60%;
+	width:100%;
+	font-family:"Calibri";
+}
+.feature{
+	position:absolute;	
+	top:-7vw;	
+	left:24vw;		
+	color:orange;
+	font-size:4vw;
+}
+
+.feature_icon{
+		top:52vw;		
+		margin: 0vw 2.4vw 0vw 0vw;	
+		width:11%;	
+		height:30px;
+}
+
+.p2_c_d{
+	text-align:center;
+	position:absolute;
+	height:40%;
+	width:100%;
+	bottom:0vw;
+}
+
+.p2_c_d_p1{
+		position:absolute;	
+		top:66vw;	
+		left:25vw;	
+		font-size:1.8vw;
+		color:orange;
+		text-align:center;
+		font-family:"Calibri";
+}
+
+.p2_c_d_p2{
+	position:absolute;	
+	top:76vw;	
+	left:0vw;	
+	font-size:1.8vw;
+	color:orange;
+	border-style:solid;
+	border-width:2px;
+	border-color:orange;
+	margin:8px 45% 8px 45%;		
+	font-family:"Calibri";
+}
+
+
+
 
 
 .block1{
