--- a/css/general.css
+++ b/css/general.css
@@ -183,23 +183,38 @@ a:hover{position:relative;top:1px;left:1px;}
 	font-family:"Calibri";
 }
 
-<div class="p3_whole">
-		
-	<span class="video"><iframe width="310%" height="270%" src="https://www.youtube.com/embed/QbTYWE2Bv00?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe></span>
-					
-	<div class="video_title">How FinTech is Shaping the Future <br>
-		    of Banking</div>
-			
-	<div class="video_text">While FinTech is revolutionizing the banking industry and giving<br>
- 				millions of people access to financial services for the first time,<br>
-				new banking models are emerging with FinTech start-ups and<br>
- 				tech firms potentially disrupting the status quo. But business<br>
- 				schools and universities are now preparing future bankers for<br>
- 				theses changes, says FinTech thought leader Hnri Arslanian.</div>
-		
-		
-  </div>
+.p3_whole{
+	display:flex;
+	position:absolute;
+	width:100%;
+	height:100%;
+}
 
+.video{
+	position: absolute;
+	top:2vw;
+	left:2vw;
+	width:14%;
+	height:9vw;	
+}
+
+.video_title{
+	position:absolute;	
+	font-size:3vw;
+	top:3vw;	
+	left:48vw;	
+	padding-right:1vw;	
+	font-family:"Calibri";
+}
+
+.video_text{
+	position:absolute;	
+	font-size:1.8vw;
+	top:11vw;	
+	left:48vw;
+	padding-top:1.5vw;
+	padding-right:12px;
+	font-family:"Calibri";}
 
 
 .block1{
