--- a/css/general.css
+++ b/css/general.css
@@ -128,6 +128,7 @@ a:hover{position:relative;top:1px;left:1px;}
 	padding-top:2.6vw;
 	padding-left:8vw;
 }
+<!--從這邊開始是第二頁-->
 .p2_c_t{
 	display:flex;		
 	position:absolute;
@@ -182,7 +183,7 @@ a:hover{position:relative;top:1px;left:1px;}
 	margin:8px 45% 8px 45%;		
 	font-family:"Calibri";
 }
-
+<!--從這邊開始是第三頁，加了第三頁之後如果刻意移到畫面右邊會有黑頻，求救啾啾啾嗚嗚嗚嗚-->
 .p3_whole{
 	display:flex;
 	position:absolute;
