--- a/css/general.css
+++ b/css/general.css
@@ -185,10 +185,8 @@ a:hover{position:relative;top:1px;left:1px;}
 }
 
 .p3_whole{
-	display:flex;
 	position:absolute;
-	width:100%;
-	height:100%;
+	width:100vw;
 }
 
 .video{
