--- a/css/general.css
+++ b/css/general.css
@@ -14,6 +14,34 @@ a:hover{position:relative;top:1px;left:1px;}
 	font-family:"Calibri";
  }
 
+.navbar{
+	cursor : pointer;
+}
+.navbar_content{
+	display: none;
+	position : absolute;
+	background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index :2;
+}
+
+.navbar_content a{
+	float : none;
+	display : block;
+	text-decoration : none;
+	text-align :left;
+	font-size : 2vw;
+}
+
+.navbar:hover .navbar_content{
+	display : block;
+}
+
+.navbar_content a:hover{
+	background-color : #F1E569;
+}
+
  .th_sub_f{
 	position: absolute;
 	left:1vw;	
@@ -26,6 +54,8 @@ a:hover{position:relative;top:1px;left:1px;}
 	color:white;	
 	padding-right:2vw;
 	margin-top:1vw;
+	border : 0;
+	outline : none;
 }
 .Fintech{
 	margin-top:1vw;
