--- a/css/general.css
+++ b/css/general.css
@@ -52,7 +52,7 @@ a:hover{position:relative;top:1px;left:1px;}
 .th_sub{
 	font-family:"Calibri";
 	color:white;	
-	position: absolute;
+	position: relative;
 	padding-right:2vw;
 	padding-top:2vw;
 	border : 0;
