--- a/css/general.css
+++ b/css/general.css
@@ -54,7 +54,7 @@ a:hover{position:relative;top:1px;left:1px;}
 	color:white;	
 	position: relative;
 	padding-right:2vw;
-	padding-top:2vw;
+	top:1vw;
 	border : 0;
 	outline : none;
 }
