--- a/css/general.css
+++ b/css/general.css
@@ -1,7 +1,7 @@
 body {
   background-color:white;
 }
-a:hover{position:relative;top:1px;left:1px;}
+h:hover{position:relative;top:1px;left:1px;}
 
 
 .theme {
