--- a/css/general.css
+++ b/css/general.css
@@ -19,6 +19,7 @@ h:hover{position:relative;top:1px;left:1px;}
 }
 .navbar_content{
 	display: none;
+	top:4vw;
 	position : absolute;
 	background-color: #f9f9f9;
     min-width: 160px;
