--- a/css/css_div1.css
+++ b/css/css_div1.css
@@ -26,6 +26,7 @@
 .navbar_content a{
 	float : none;
 	display : block;
+	width:100%;
 	text-decoration : none;
 	text-align :left;
 	font-size : 2vw;
