--- a/css/css_div2.css
+++ b/css/css_div2.css
@@ -54,3 +54,105 @@
 	width:100%;
 	bottom:0vw;
 }
+
+/*圖示+文字*/
+.test {
+  cursor: pointer;
+  width:10vw;
+  height:10vw;
+  position: absolute;
+  top:8vw;
+  left:30vw;
+  background-color: white;
+}
+
+.t_content {
+  display: none;
+  position: absolute;
+  top: 13vw;
+  left: 0vw;
+  z-index: 2;
+}
+
+.t_content img{
+  display: block;
+    width:10vw;
+  height:10vw;
+}
+
+.test:hover .t_content {
+  display: block;
+    width:10vw;
+  height:10vw;
+}
+
+.testb {
+  cursor: pointer;
+  width:10vw;
+  height:10vw;
+  position: absolute;
+  top:8vw;
+  left:40vw;
+  background-color: yellow;
+}
+
+.t_contentb {
+  display: none;
+  position: absolute;
+  top: 13vw;
+  left: 0vw;
+  z-index: 2;
+}
+
+.t_contentb a{
+  display: block;
+  width:10vw;
+  height:10vw;
+}
+
+.testb:hover .t_contentb {
+  display: block;
+   width:10vw;
+  height:10vw;
+}
+/*c*/
+.testc {
+  cursor: pointer;
+  width:10vw;
+  height:10vw;
+  position: absolute;
+  top:8vw;
+  left:50vw;
+  background-color: white;
+}
+
+.t_contentc {
+  display: none;
+  position: absolute;
+  top: 13vw;
+  left: 0vw;
+  z-index: 2;
+}
+
+.t_contentc a{
+  display: block;
+    width:10vw;
+  height:10vw;
+}
+
+.testc:hover .t_contentc {
+  display: block;
+    width:10vw;
+  height:10vw;
+}
+/*general*/
+.general:hover .g_content {
+  display: none;
+   width:10vw;
+  height:10vw;
+}
+
+#text{
+  position: relative;
+  top:13vw;
+}
