--- a/css/css_div2.css
+++ b/css/css_div2.css
@@ -61,15 +61,14 @@
   width:10vw;
   height:10vw;
   position: absolute;
-  top:8vw;
-  left:30vw;
+  top:0vw;
+  left:-4vw;
 }
 
 .t_content {
   display: none;
   position: absolute;
-  top: 13vw;
-  left: 0vw;
+  top: 0vw;
   z-index: 2;
 }
 
@@ -90,15 +89,14 @@
   width:10vw;
   height:10vw;
   position: absolute;
-  top:8vw;
-  left:40vw;
+  top:0vw;
+  left:10vw;
 }
 
 .t_contentb {
   display: none;
   position: absolute;
-  top: 13vw;
-  left: 0vw;
+  top: 0vw;
   z-index: 2;
 }
 
@@ -119,15 +117,14 @@
   width:10vw;
   height:10vw;
   position: absolute;
-  top:8vw;
-  left:50vw;
+  top:0vw;
+  left:24vw;
 }
 
 .t_contentc {
   display: none;
   position: absolute;
-  top: 13vw;
-  left: 0vw;
+  top: 0vw;
   z-index: 2;
 }
 
@@ -152,4 +149,5 @@
 #text{
   position: relative;
   top:13vw;
+  width:50vw;
 }
