--- a/css/css_div2.css
+++ b/css/css_div2.css
@@ -110,6 +110,7 @@
   display: block;
    width:10vw;
   height:10vw;
+  left:-20vw;
 }
 /*c*/
 .testc {
@@ -143,6 +144,7 @@
   display: none;
    width:10vw;
   height:10vw;
+  left:-32vw;
 }
 
 #text{
